feat: ui and refactoring core func

--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>Document</title>
 </head>
 <body>
+    <div class="container">
+        <button id="rock">Rock</button>
+        <button id="paper">Paper</button>
+        <button id="scissor">Scissor</button>
+        <div class="score"></div>
+    </div>
 </body>
 <script src="rps.js"></script>
 </html>
